whitespace query fixes & pagination fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -351,9 +351,12 @@ table#apply-forms-list {
   margin: 7px 0 0 0;
 }
 
-.navbar-text.pagination-info {
+.pagination-info.navbar-text {
   color: white;
+  margin-left: -0.2em;
 }
+
+
 
 .free-places {
  h4 { display: inline; }
